[metadata]
name = linuxforhealth-lib-kafka
version = attr: lib_kafka.__version__
description = LinuxForHealth lib-kafka is a Python 3.x asyncio client which wraps Confluent's Python Kafka client.
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers

[options]
include_package_data = True
install_requires =
    confluent-kafka >= 1.7.0, < 2.0.0
    pydantic >= 1.8.2, < 2.0.0
    python-dotenv >= 0.19.0, <= 0.25.0
packages=find:
package_dir=
    =src
python_requires = >= 3.8
zip_safe = False

[options.extras_require]
test=
    pytest >= 6.2.0, < 7.0.0
    pytest-cov>= 2.7.0, < 3.0.0
    twine >= 1.14.0, < 2.0.0
    flake8 >= 3.7.0, < 4.0.0
    asynctest >= 0.13.0, <= 0.25.0
build=
    wheel >= 0.37.0, <= 0.50.0

[options.packages.find]
where=src

[flake8]
max-line-length=140